# similarity-measures

./: .Makefile.swp  .gitignore  Cargo.toml  Makefile  README.md  SAD.py  pyproject.toml  requirements-all.txt
.github/workflows/: python-app.yml  python-publish.yml
PruebasAlgoritmos/: Algoritmos.cpp  Algoritmos.h  DTW.cpp  DTW.h  PruebasAlgoritmos.cpp  PruebasAlgoritmos.sln  PruebasAlgoritmos.vcxproj  PruebasAlgoritmos.vcxproj.filters  trayectoria1.geojson
PruebasAlgoritmos/Assets/: trayectoria2.geojson
PruebasAlgoritmos/Headers/: Algoritmos.h  Coordinates.h  DTW.h  Hausdorff.h
PruebasAlgoritmos/Src/: main.cpp
PruebasAlgoritmos/Src/Algorithms/: Algoritmo.cpp  DTW.cpp  Hausdorff.cpp
PruebasAlgoritmos/Src/Algorithms/Headers/: Algoritmos.h  DTW.h  Hausdorff.h
PruebasAlgoritmos/Src/Interfaces/: Algoritmos.cpp
assets/: basic.json  pyspark_example.geojson
assets/GEOJSON 2/: Atizapan.json  Centros Comerciales.json  Diccionario.json  Diccionario.txt  Ecatepec.json  Gobiernos.json  Hospitales.txt  METROS.json  Naucalpan.json  Neza.json  Parques_yPlazas.json  Tlane.json  museos.json
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: exe_times.cpp
notebooks/: TiemposLectura.ipynb  cpp-py.ipynb  cppyy.ipynb  euclidean.ipynb  pyspark-read.ipynb  pyspark.ipynb  rust.ipynb
rust/: durations.txt
rust/src/: main.rs
similarity_measures_b106/: euclidean.py  example.py
src/: Algoritmo.cpp  Algoritmos.h  Coordinates.h  DTW.cpp  DTW.h  Frechet.cpp  Hausdorff.cpp  LCSS.cpp  RDP.cpp  edit_distance.cpp  edit_distance.h  euclidean.cpp  euclidean.h  euclidean.py  lib.rs  manhattan.cpp  manhattan.h
src/Headers/: Frechet.h  Hausdorff.h  LCSS.h  RDP.h  manhattan.h
tests/: dtw_test_pyspark.py  test_dtw.cpp  test_dtw.py  test_dtw_c++.py  test_dtw_ordenados.py  test_edr.cpp  test_edr.py  test_euclidean.cpp  test_euclidean.py  test_frechet.py  test_hausdorff.py  test_lcss.py  test_manhattan.cpp  test_manhattan.py  test_rdp.py
tests/dtw_cython/: algoritmos.cpp  algoritmos.h  dtw.cpp  dtw.h  dtw.pxd  dtw.pyx  dtw_ORIGINAL.cpp  dtw_module.cpp  dtw_module.pyx  setup.py  test_dtw_cython.py
tests/dtw_rust/: Cargo.toml  test_dtw_rust.py
tests/dtw_rust/src/: lib.rs
utils/: genjson.py  plotfn.py
